# phylostan

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
examples/: Dockerfile  README.md  SConstruct  sim6.ipynb  sim6.trees
examples/DS1/: DS1.nex  DS1.trees  jc69-vb.json
examples/HCV/: HCV.nexus  HCV.tree
examples/HCV/beast/: hcv.xml
examples/fluA/: .Rhistory  clean  fluA.tree
examples/fluA/beast/: beast.xml
examples/sim6/: sim6.fa  sim6.tree
phylostan/: generate_script.py  phylostan.py  utils.py
scripts/: generate_script.py  infer_tree.py  phylo.py  phylostan.py  phystan-mixture.py  phystan.py  phystan_all.py  phystan_parser.py  simulate.py  utils.py
src/: GTR-coalescent.stan  GTR-uniform.stan  HKY-coalescent.stan  JC69-GTR.stan  JC69-HKY-GTR.stan  JC69-coalescent.stan  JC69-mixture.stan  JC69-mixture2.stan  JC69-uniform.stan  K80-coalescent.stan
