[metadata]
name = phylostan
version = 1.0.5
url = https://github.com/4ment/phylostan
author = Mathieu Fourment
author_email = mathieu.fourment@uts.edu.au
keywords = phylogenetics, variational, HMC, Bayes, Stan
description = Phylogenetic inference with Stan
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL3
license_file = LICENSE
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
python_requires = >=3.6
packages = find:
package_dir =
    =.
install_requires =
    DendroPy
    numpy>=1.7
    pystan>=2.19,<3

[options.entry_points]
console_scripts =
    phylostan = phylostan.phylostan:main

[options.extras_require]
dev =
    black
    flake8
    isort
    pylint
test =
    pytest

[flake8]
max-line-length = 88
ignore = E203, W503
